# mv-brain-hermes

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
mv_brain_hermes/: __init__.py  bridge.py  cli.py  core.py  demo.py  mcp_server.py  models.py
tests/: test_bridge.py  test_cli.py  test_core.py  test_safety.py
