[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mv-brain-hermes"
version = "0.1.0"
description = "Hermes/MCP adapter for local-first music-video clip search and MP4 cut exports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "hyuk-ju" }]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
test = ["pytest>=8.0"]

[project.scripts]
mv-brain-hermes = "mv_brain_hermes.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
