[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mv-brain-hermes"
version = "0.1.0"
description = "Hermes/MCP adapter for local-first music-video clip search and MP4 cut exports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "hyuk-ju" }]
keywords = ["hermes", "mcp", "video", "music-video", "ffmpeg", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Video",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/hyuk-ju/mv-brain-hermes"
Repository = "https://github.com/hyuk-ju/mv-brain-hermes"
Issues = "https://github.com/hyuk-ju/mv-brain-hermes/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
test = ["pytest>=8.0"]

[project.scripts]
mv-brain-hermes = "mv_brain_hermes.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mv_brain_hermes*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
